fix difficulty label

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
           </div>
           <div class="option">
             <div class="label">
-              Columns:
+              Difficulty:
             </div>
             <select class="game-option difficulty" name="">
               <option value="1">Easy</option>
